# stremio-livetv

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  config.example.json  config.json  pyproject.toml
.github/workflows/: docker.yml
stremio_livetv/: main.py
