[tool.poetry]
name = "stremio_livetv"
version = "0.1.0"
description = "Proxy service that converts Stremio Live TV addons into a M3U8 playlist"
authors = ["Dominic Frye <me@itsnebula.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/itsnebulalol/stremio-livetv"
keywords = []
classifiers = [
    "Natural Language :: English",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
requests = "^2.32.3"

[tool.poetry.scripts]
stremio-livetv = 'stremio_livetv.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
